freesia/manifests/asf/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  # cert-manager.io/cluster-issuer: letsencrypt-prod
  name: asf
spec:
  ingressClassName: nginx
  rules:
  - host: asf.harvestasya.org
    http:
      paths:
      - backend:
          service:
            name: asf
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - asf.harvestasya.org
