freesia/manifests/asf/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: asf

spec:
  routes:
    - kind: Rule
      match: Host(`asf.harvestasya.org`)
      priority: 10
      services:
        - name: asf
          port: 1242

      middlewares:
        - name: auto-detect-content-type
          namespace: traefik
        - name: authentik-forward-auth
          namespace: authentik

    - kind: Rule
      match: Host(`asf.harvestasya.org`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: http
